[package]
name = "lilos-hal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = [
    "embedded",
    "no-std",
    "asynchronous",
]

build = "build.rs"

[features]
# Define the number of NVIC priority bits.
prio-bits-0 = []
prio-bits-1 = []
prio-bits-2 = []
prio-bits-3 = []
prio-bits-4 = []
prio-bits-5 = []
prio-bits-6 = []
prio-bits-7 = []
prio-bits-8 = []

cortex-m = ["dep:critical-section"]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

num-traits = { version = "0.2.14", default-features = false }

cortex-m.workspace = true
critical-section = { version = "1", optional = true }