[package]
name = "lilos-rp"
version = "0.2.0"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
description = "A chip support crate for RP2040 on lilos"
keywords = ["async", "embedded", "os"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"

edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
lilos.workspace = true
lilos-list.workspace = true
lilos-hal = { workspace = true, features = ["cortex-m", "prio-bits-2"] }
pin-project.workspace = true
scopeguard.workspace = true

embedded-hal-02.workspace = true
embedded-hal-1.workspace = true
embedded-hal-async.workspace = true

rand_core = "0.6.4"

cortex-m.workspace = true
cortex-m-rt.workspace =  true
rp-pac.workspace = true

defmt = { version = "0.3.8", optional = true}
log = { version = "0.4.22", optional = true }

critical-section = { version = "1.0.0", features = ["restore-state-u8"] }

[features]
default = ["rt", "rp2040"]
rt = [ "rp-pac/rt" ]


rp2040 = ["rp-pac/rp2040"]
rp235x = ["rp-pac/rp235x"]
rp235xb = ["rp-pac/rp235x"]

multicore = ["lilos/multicore"]

_test = []
qspi-as-gpio = []

[lib]
test = false
bench = false
